# baes_demo

./: .cursorrules  .gitignore  .pre-commit-config.yaml  =3.8.0  CHANGELOG.md  EXTRA_ATTRIBUTES_FIX_SUMMARY.md  PRESENTATION_LOGGING.md  README.md  README_CLI.md  REAL_WORLD_TESTING_SUMMARY.md  RELATIONSHIP_DETECTION_ISSUE.md  TEST_OPTIMIZATION_REPORT.md  bae_chat.py  bae_noninteractive.py  bae_quick_metrics_plan.md  bae_session.json  config.py  debug_api_db_path.py  debug_execution_results.json  debug_preserve_system.py  env.template  fix_linting.py  fix_long_lines.py  pyproject.toml  pytest.ini  relationship_detection_fix_analysis.md  requirements.txt  roteiro.txt  run_tests.py  test_bug_fix_verification.py  test_frontend_feedback.py  test_hook_fix.txt  test_llm_only_relationship.py  test_llm_relationship_detection.py  test_relationship_fix_verification.py  test_specific_relationship.py  test_stage4_feedback_extraction.py
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  tasks-template.md
bae_academic_system/: README.md  config.py  pytest.ini  requirements.txt  run_tests.py
bae_academic_system/agents/: __init__.py  base_agent.py  base_bae.py  database_swea.py  frontend_swea.py  generic_bae.py  programmer_swea.py  student_bae.py  teacher_bae.py
bae_academic_system/api/: main.py
bae_academic_system/core/: __init__.py  bae_registry.py  context_store.py  enhanced_runtime_kernel.py  entity_recognizer.py  managed_system_manager.py  runtime_kernel.py
bae_academic_system/database/: scenario1_test.json  test_context_store.json
bae_academic_system/llm/: __init__.py  openai_client.py
bae_academic_system/tests/: conftest.py  test_managed_system.py
bae_academic_system/ui/: app.py
baes/: .cursorrules  __init__.py
baes/agents/: __init__.py  base_agent.py  base_bae.py  course_bae.py  database_swea.py  frontend_swea.py  generic_bae.py  programmer_swea.py  student_bae.py  (+1 more)
database/: context_store.json
docs/: 20250609 - UECE - Doutorado - Prof.Leonardo - Trabalho Final.md  API.md  AUTO_RESTART_FEATURE.md  BAE_IMPLEMENTATION_GUIDE.md  CENTRALIZED_CONFIGURATION.md  CONFIGURATION_UNIFICATION_SUMMARY.md  FINAL_IMPLEMENTATION_REPORT.md  FUTURE_FEATURES.md  GENERIC_BAE_FALLBACK.md  HYBRID_COORDINATION_IMPLEMENTATION_SUMMARY.md  IMMEDIATE_REVIEW_WORKFLOW.md  IMPLEMENTATION_ANALYSIS_AND_FIXES.md  IMPLEMENTATION_CHECKLIST.md  INTEGRATED_TEST_DRIVEN_WORKFLOW.md  LOGGING_CONFIGURATION.md  PERFORMANCE_OPTIMIZATION.md  PERFORMANCE_OPTIMIZATION_QUICKSTART.md  PROMPT_TEMPLATES.md  PROOF_OF_CONCEPT.md  README_DOCUMENTATION.md  REAL_WORLD_TESTING_GUIDE.md  TECHLEAD_HYBRID_COORDINATION.md  TECHLEAD_REFACTORY_REPORT.md  TESTING_AUTOMATION.md  VALIDATION_ERROR_HANDLING_SUMMARY.md  architecture.md  bae_multiagent_prototype_guide.md  chatgpt_log.txt
examples/: json_enforcement_demo.py
scripts/: run_full_tests.sh
tests/: README.md  TEST_ANALYSIS_REPORT.md  __init__.py  conftest.py  test_managed_system.py
(+132 files in other folders)
